--- a/application/views/scripts/carousel/delete.phtml
+++ b/application/views/scripts/carousel/delete.phtml
@@ -1,4 +1,3 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Carousel</b> and script/action name <b>delete</b></p>
-</div>
+<h3><?php echo $this->translate('You are realy want to delete?'); ?></h3>
+<h4><?= $this->translate($this->caption) ?>: <?= $this->message; ?></h4>
+<?php echo $this->form; ?>
