--- a/application/views/scripts/carousel/index.phtml
+++ b/application/views/scripts/carousel/index.phtml
@@ -1,5 +1,10 @@
-<?php $url_create = $this->url(array('carousel' => $this->carousel_id), 'carousel-create'); ?>
+<!------------------------------------------------------------->
 
-<a class="btn btn-info" href="<?= $url_create; ?>">
-    <?= $this->translate('carousel-create'); ?>
-</a>
+<div class="page-header">
+    <h2><?= $this->translate('carousel') ?></h2>
+</div>
+
+<?= $this->partial('/carousel/row/carousel-admin-panel.phtml'); ?>
+
+<?= $this->partial('/carousel/row/carousel-table.phtml', array('carousels' => $this->carousels)); ?>
+
