--- a/application/views/scripts/carousel/update.phtml
+++ b/application/views/scripts/carousel/update.phtml
@@ -1,4 +1,2 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Carousel</b> and script/action name <b>update</b></p>
-</div>
+<?= $this->form; ?>
+<?= $this->partial('/carousel/row/recommended.phtml');?>
