--- a/application/layouts/master/header.phtml
+++ b/application/layouts/master/header.phtml
@@ -1,5 +1,6 @@
-<div class="row">
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+
+
+<header class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -11,23 +12,28 @@
             <?= $this->navigation()->menu()->setUlClass("nav navbar-nav"); ?>
         </div>
 
-    </nav>
-</div>
+    </header>
 
-<header class="row">
-    <div class="col-lg-4 col-sm-5">
+<div class="bs-docs-header">
+    <div class="container">
+<div class="row">
+    <div class="col-lg-4">
         <h1 class="nice-font">
             <a href="/home"><?= $this->translate('Helena Osokina'); ?></a>
         </h1>
     </div>
 
-    <div class="col-lg-8 col-sm-7">
-        <h4 class="nice-font">
-            <a href="/home">
+    <div class="col-lg-8">
+<!--        <h4 class="nice-font">-->
+<!--            <a href="/home">-->
+    <p class="head-descr nice-font">
                 <?= $this->translate(
                     'Тут ви зможете підібрати до вашого стилю унікальну в свому роді річ. а також всілякі статі та все що повязані з бісероплетінням.'
                 ); ?>
-            </a>
-        </h4>
+    </p>
+<!--            </a>-->
+<!--        </h4>-->
     </div>
-</header>
+</div>
+    </div>
+</div>
