--- a/application/views/scripts/carousel/success.phtml
+++ b/application/views/scripts/carousel/success.phtml
@@ -1,4 +1,8 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Carousel</b> and script/action name <b>success</b></p>
-</div>
+<h2><?= $this->translate('success'); ?></h2>
+<?= $this->translate(implode($this->messages)); ?>
+
+<p>
+    <a href="<?= $this->url(array(), 'carousel'); ?>">
+        <?= $this->translate('goto carousel'); ?>
+    </a>
+</p>
