--- a/application/views/scripts/product/row/product-admin-panel.phtml
+++ b/application/views/scripts/product/row/product-admin-panel.phtml
@@ -1,4 +1,4 @@
-<?php IF(Acl::getInstance()->getRole()==Acl::ROLE_ADMIN): ?>
+<?php IF(Acl::getInstance()->getCurrentRole()==Acl::ROLE_ADMIN): ?>
 
 <div class="btn-group" role="group">
 
