--- a/application/layouts/master/footer.phtml
+++ b/application/layouts/master/footer.phtml
@@ -1,5 +1,27 @@
-<footer>
-    <div class="pull-left">
-        <section>© 2015<a href="http://summers.url.ph">summers.url.ph</a></section>
+<footer class="section section-primary">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h1 class="nice-font"><?= $this->translate('Helena Osokina') ?></h1>
+                <div class="pull-left">
+                    <section>© 2015 <a href="http://summers.url.ph">summers.url.ph</a></section>
+                </div>
+            </div>
+            <div class="col-sm-6">
+
+                <div class="pull-right snenko-btn-social-icon">
+                    <br>
+                    <a class="btn btn-social-icon btn-facebook"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a>
+                    <a class="btn btn-social-icon btn-vk"><i class="fa fa-3x fa-fw fa-vk text-inverse"></i></a>
+                </div>
+
+            </div>
+        </div>
     </div>
 </footer>
+
+<!--<footer>-->
+<!--    <div class="pull-left">-->
+<!--        <section>© 2015<a href="http://summers.url.ph">summers.url.ph</a></section>-->
+<!--    </div>-->
+<!--</footer>-->
