--- a/application/views/scripts/gallery/create.phtml
+++ b/application/views/scripts/gallery/create.phtml
@@ -1,2 +1,2 @@
-<?php echo $this->form; ?>
+<?= $this->partial('section/form.phtml', array('form' => $this->form) ); ?>
 <div style="float:right"><?=$this->image?></div>
