--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,16 +1,120 @@
-<div class="row">
-    <div class="col-md-9" role="main">
-        <div class="bs-docs-section">
-            <?= $this->partial('/index/blocks/carusel.phtml', array('carousel' => $this->carousel['carousel'])); ?>
+<div class="jumbotron snenko-color">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+
+                <h1 class="nice-font"><?= $this->translate('Helena Osokina'); ?></h1>
+                <p class="head-descr nice-font"><?= $this->translate('sublogo'); ?></p>
+                <a href="<?php echo $this->url(array(), 'gallery-index'); ?>"
+                   class="btn btn-outline-inverse btn-lg ">
+                    <?= $this->translate('Learn more') ?>
+                    <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+                </a>
+
+            </div>
         </div>
     </div>
-    <div class="col-md-3" role="main">
-        <div class="bs-docs-section">
-            <?= $this->partial('/index/blocks/carousel-product.phtml', array('products' => $this->products) ); ?>
-        </div>
-        <div class="bs-docs-section" style="border: 1px solid red">
-            <?= $this->partial('/index/blocks/last-articles.phtml' ); ?>
+
+</div>
+
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <?= $this->partial('/index/blocks/carusel.phtml', array('carousel' => $this->carousel)); ?>
+            </div>
+            <div class="col-md-4">
+                <?= $this->partial('/index/blocks/right-panel.phtml', array('articles' => $this->articles)); ?>
+            </div>
         </div>
     </div>
 </div>
+
+<!-- Products -->
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title"><?= $this->translate('My products') ?></h3>
+                    </div>
+
+                    <div class="panel-body">
+
+                        <?= $this->partial('/index/blocks/products.phtml', array('products' => $this->products)); ?>
+
+                    </div>
+
+                    <div class="panel-footer">
+                        <a class="btn btn-lg btn-outline"
+                           href="<?php echo $this->url(array(), 'gallery-index'); ?>"
+                           role="button">
+                            <?= $this->translate('Learn more') ?>
+                            <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+                        </a>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--products-->
+<!--<div class="section">-->
+<!--    <div class="container">-->
+<!--        <div class="row">-->
+<!--            <div class="col-md-12">-->
+<!---->
+<!--                <div class="panel panel-default">-->
+<!--                    <div class="panel-heading">-->
+<!--                        <h3 class="panel-title nice-font">Мої товари</h3>-->
+<!--                    </div>-->
+<!--                    <div class="panel-body">-->
+
+<!--                        --><?//= $this->partial('/index/blocks/products.phtml', array('products' => $this->products)); ?>
+
+<!--                    </div>-->
+<!--                </div>-->
+<!---->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
+<!--                <div class="section">-->
+<!--                    <h3>Мої товари</h3>-->
+<!--                        --><?//= $this->partial('/index/blocks/products.phtml', array('products' => $this->products)); ?>
+<!---->
+<!--                    <a class="btn btn-lg btn-outline"-->
+<!--                       href="--><?php //echo $this->url(array(), 'gallery-index'); ?><!--"-->
+<!--                       role="button"-->
+<!--                       target="_blank">--><?//= $this->translate('Learn more') ?><!--</a>-->
+<!--                </div>-->
+
+
+<!--<div class="row">-->
+<!--    <div class="col-md-9" role="main">-->
+<!--    --><?////= $this->partial('/index/row/carousel-product.phtml', array('products' => $this->products) ); ?>
+<!--</div>-->
+<!--<div class="row">-->
+<!--    <div class="col-md-9" role="main">-->
+<!--        <div class="bs-docs-section">-->
+<!--            --><?//= $this->partial('/index/blocks/carusel.phtml', array('carousel' => $this->carousel['carousel'])); ?>
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="col-md-3" role="main">-->
+<!--        <div class="bs-docs-section">-->
+<!--            --><?//= $this->partial('/index/blocks/last-articles.phtml', array('articles'=> $this->articles) ); ?>
+<!--        </div>-->
+<!--        <div class="bs-docs-section">-->
+<!--            --><?//= $this->partial('/index/blocks/carousel-product.phtml', array('products' => $this->products) ); ?>
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
+
 
