--- a/application/views/scripts/product/row/product-tr.phtml
+++ b/application/views/scripts/product/row/product-tr.phtml
@@ -4,7 +4,7 @@
         <td><?= $this->translate('picture'); ?></td>
         <td><?= $this->translate('name'); ?></td>
         <td><?= $this->translate('description'); ?></td>
-        <td><?= $this->translate('galeries'); ?></td>
+        <td><?= $this->translate('galleries'); ?></td>
     </tr>
 <?php ELSE: ?>
 <tr>
