--- a/application/layouts/master/header.phtml
+++ b/application/layouts/master/header.phtml
@@ -1,39 +1,18 @@
+<header class="navbar navbar-default" role="navigation">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="glyphicon glyphicon-arrow-down"></span>
+            <?= $this->translate('MENU'); ?>
+        </button>
 
-
-<header class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="glyphicon glyphicon-arrow-down"></span>
-                <?= $this->translate('MENU'); ?>
-            </button>
-        </div>
-        <div class="collapse navbar-collapse" id="collapse">
-            <?= $this->navigation()->menu()->setUlClass("nav navbar-nav"); ?>
-        </div>
-
-    </header>
-
-<div class="bs-docs-header">
-    <div class="container">
-<div class="row">
-    <div class="col-lg-4">
-        <h1 class="nice-font">
-            <a href="/home"><?= $this->translate('Helena Osokina'); ?></a>
-        </h1>
+        <a class="navbar-brand nice-font-dark"
+           href="<?php echo $this->url(array(), 'home'); ?>">
+            <?= $this->translate('Summers') ?>
+        </a>
     </div>
 
-    <div class="col-lg-8">
-<!--        <h4 class="nice-font">-->
-<!--            <a href="/home">-->
-    <p class="head-descr nice-font">
-                <?= $this->translate(
-                    'Тут ви зможете підібрати до вашого стилю унікальну в свому роді річ. а також всілякі статі та все що повязані з бісероплетінням.'
-                ); ?>
-    </p>
-<!--            </a>-->
-<!--        </h4>-->
+    <div class="collapse navbar-collapse" id="collapse">
+        <?= $this->navigation()->menu()->setUlClass("nav navbar-nav"); ?>
     </div>
-</div>
-    </div>
-</div>
+</header>
