--- a/application/views/scripts/blog/success.phtml
+++ b/application/views/scripts/blog/success.phtml
@@ -1,2 +1,5 @@
-<h2><?php echo $this->translate('success'); ?></h2>
-<?php echo $this->translate(implode($this->messages)); ?>
+<?= $this->partial('section/success.phtml',
+    array('messages' => $this->messages,
+          'url'      => $this->url(array(), 'blog'),
+          'gototext' => $this->translate('goto blog')));
+?>
