--- a/application/views/scripts/carousel/delete.phtml
+++ b/application/views/scripts/carousel/delete.phtml
@@ -1,3 +1,2 @@
-<h3><?php echo $this->translate('You are realy want to delete?'); ?></h3>
-<h4><?= $this->translate($this->caption) ?>: <?= $this->message; ?></h4>
-<?php echo $this->form; ?>
+<?= $this->partial( 'section/form-delete.phtml',
+    array('caption'=> $this->caption, 'message'=>$this->message, 'form' => $this->form,));?>
