--- a/application/views/scripts/gallery/index.phtml
+++ b/application/views/scripts/gallery/index.phtml
@@ -1,11 +1,14 @@
-<div class="page-header">
-    <h2><?= $this->translate('gallery') ?></h2>
-</div>
+<?= $this->partial('/section/jumbotron.phtml', array('title'=> $this->translate('gallery'))); ?>
 
-<div>
-
-    <?= $this->partial('/gallery/row/gallery-admin-panel.phtml'); ?>
-
-    <?= $this->partial('gallery/row/galleries.phtml', array('galleries' => $this->records) ); ?>
-
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <?= $this->partial('/gallery/row/gallery-admin-panel.phtml'); ?>
+            </div>
+        </div>
+        <div class="row">
+            <?= $this->partial('gallery/row/galleries.phtml', array('galleries' => $this->records) ); ?>
+        </div>
+    </div>
 </div>
