--- a/application/views/scripts/gallery/success.phtml
+++ b/application/views/scripts/gallery/success.phtml
@@ -1,8 +1,5 @@
-<h2><?= $this->translate('success'); ?></h2>
-<?= $this->translate(implode($this->messages)); ?>
-
-<p>
-    <a href="<?= $this->url(array(), 'gallery-index'); ?>">
-        <?= $this->translate('goto gallery'); ?>
-    </a>
-</p>
+<?= $this->partial('section/success.phtml',
+    array('messages' => $this->messages,
+          'url'      => $this->url(array(), 'gallery-index'),
+          'gototext' => $this->translate('goto gallery')));
+?>
