--- a/application/views/scripts/index/blocks/carusel.phtml
+++ b/application/views/scripts/index/blocks/carusel.phtml
@@ -1,8 +1,6 @@
-<?php $this->headLink()->appendStylesheet('/css/docs.min.css'); ?>
-
 <?php IF ($this->carousel): ?>
     <div class="thumbnail">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <div id="carousel-generic" class="carousel slide" data-ride="carousel">
 
             <!-- Indicators -->
             <ol class="carousel-indicators">
