--- a/application/views/scripts/index/blocks/last-articles.phtml
+++ b/application/views/scripts/index/blocks/last-articles.phtml
@@ -1,18 +1,16 @@
 <?php IF (count($this->articles)): ?>
 
-    <?= $this->translate('Last articles') ?>
-    <ul>
-        <?php foreach ($this->articles as $k => $v): ?>
-            <li class="carousel-caption">
-                <!--                    <div class="carousel-caption">-->
-<!--                <h4 id="first-slide-label">-->
+    <ul id="last-articles" class="nav nav-pills">
 
-                    <a href="<?= $this->url(array('id' => $v['blogid']), 'blog-display', true); ?>">
-                        <?= $v['title'] ?>
-                    </a>
-<!--                </h4>-->
+        <?php FOREACH ($this->articles as $k => $v): ?>
+            <li class="presentation">
+                <a href="<?= $this->url(array('id' => $v['blogid']), 'blog-display', true); ?>">
+                    <span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span>
+                    <?= $v['title'] ?>
+                </a>
             </li>
-        <?php endforeach; ?>
+        <?php ENDFOREACH; ?>
+
     </ul>
 
 <?php ENDIF; ?>
