--- a/application/views/scripts/product/display.phtml
+++ b/application/views/scripts/product/display.phtml
@@ -1,22 +1,25 @@
-<div class="page-header">
-    <h2><?= $this->escape($this->product['name']) ?></h2>
+<?= $this->partial('/section/jumbotron.phtml', array('title'=> $this->escape($this->product['name']))); ?>
+
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <?= $this->partial('/product/row/product-admin-panel.phtml'); ?>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+
+                <p><?= $this->escape($this->product['description']); ?></p>
+                <?= $this->partial('/product/row/product-url.phtml', array('url' => $this->product['url'])); ?>
+                <hr/>
+                <!--        photos-->
+                <?= $this->partial('/product/row/pictures.phtml', array('pictures' => $this->product['pictures'])); ?>
+                <hr/>
+                <!--        galleries-->
+                <?= $this->partial('/product/row/galleries.phtml', array('galleries' => $this->product['gallerys']));?>
+
+            </div>
+        </div>
+    </div>
 </div>
-
-<?= $this->partial('/product/row/product-admin-panel.phtml', array('productid' => $this->product['productid'])); ?>
-
-<!--заголовок галереї+опис+зображення-->
-<div>
-
-    <section>
-        <article>
-            <?= $this->escape($this->product['description']); ?>
-        </article>
-        <?= $this->partial('/product/row/product-url.phtml', array('url' => $this->product['url'])); ?>
-    </section>
-    <!--        photos-->
-    <?= $this->partial('/product/row/pictures.phtml', array('pictures' => $this->product['pictures'])); ?>
-    <!--        galleries-->
-    <?= $this->partial('/product/row/galleries.phtml', array('galleries' => $this->product['gallerys']));?>
-
-</div>
-
