--- a/public/css/customer.css
+++ b/public/css/customer.css
@@ -1,18 +1,12 @@
 /*body { padding-top: 70px; }*/
 
-footer {
-    padding: 2em 0;
-    margin: 3em 0;
-    border-top: 1px solid #ddd;
-    color: #999;
-    text-align: center;
-}
-
-.nice-font {
-    font-style: italic;
-    font-weight: bold;
-    font-family: Georgia,serif;
-}
+/*footer {*/
+    /*padding: 2em 0;*/
+    /*margin: 3em 0;*/
+    /*border-top: 1px solid #ddd;*/
+    /*color: #999;*/
+    /*text-align: center;*/
+/*}*/
 
 p.nice-font{
     color: yellow;
@@ -25,6 +19,12 @@ h1.nice-font a{
 /*коррекція*/
 .head-descr{margin-right: 0 !important;}
 
+.bs-product:after {
+    content: "Продукти" !important;
+}
+
+#carousel-generic .carousel-inner .carousel-caption a {color:#ffffff;}
+
 /*#last-articles.bs-example:after {*/
     /*position: absolute;*/
     /*top: 15px;*/
@@ -35,4 +35,44 @@ h1.nice-font a{
     /*text-transform: uppercase;*/
     /*letter-spacing: 1px;*/
     /*content: "Останні статті" !important;*/
+/*}*/
+
+/*#last-articles:after {*/
+    /*position: absolute;*/
+    /*top: 15px;*/
+    /*left: 15px;*/
+    /*font-size: 12px;*/
+    /*font-weight: 700;*/
+    /*color: #959595;*/
+    /*text-transform: uppercase;*/
+    /*letter-spacing: 1px;*/
+    /*content: "Example";*/
+    /*content: "Last articles" !important;*/
+/*}*/
+
+/*#last-articles {*/
+    /*position: relative;*/
+    /*padding: 45px 15px 15px;*/
+    /*margin: 0 -15px 15px;*/
+    /*border-color: #e5e5e5 #eee #eee;*/
+    /*border-style: solid;*/
+    /*border-width: 1px 0;*/
+    /*-webkit-box-shadow: inset 0 3px 6px rgba(0,0,0,.05);*/
+    /*box-shadow: inset 0 3px 6px rgba(0,0,0,.05);*/
+/*}*/
+
+/*.jumbotron {*/
+    /*color: white;*/
+    /*background-color: #563d7c;*/
+/*}*/
+
+/*.panel-default>.panel-heading {*/
+    /*color: white;*/
+    /*background-color: #563d7c;*/
+    /*border-color: #ddd;*/
+/*}*/
+
+/*.panel-footer {*/
+    /*color: white;*/
+    /*background-color: #563d7c;*/
 /*}*/
