--- a/application/layouts/master.phtml
+++ b/application/layouts/master.phtml
@@ -5,6 +5,8 @@
     <?php echo $this->headTitle(); ?>
     <?php echo $this->headMeta(); ?>
 
+    <link rel="SHORTCUT ICON" href="/favicon.png" type="image/x-icon">
+
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
 
