--- a/application/layouts/master/footer.phtml
+++ b/application/layouts/master/footer.phtml
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h1 class="nice-font"><?= $this->translate('Helena Osokina') ?></h1>
+                <h1 class="nice-font"><?= $this->translate('label') ?></h1>
                 <div class="pull-left">
                     <section>© 2015 <a href="http://summers.url.ph">summers.url.ph</a></section>
                 </div>
