--- a/application/views/scripts/section/success.phtml
+++ b/application/views/scripts/section/success.phtml
@@ -2,11 +2,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2><?= $this->translate('success'); ?></h2>
-                <?= $this->translate(implode($this->messages)); ?>
-                <?php IF($this->url): ?>
-                    <p><a href="<?= $this->url; ?>"><?= $this->gototext; ?></a></p>
-                <?php ENDIF; ?>
+                <div class="well">
+                    <h2><?= $this->translate('success'); ?></h2>
+                    <p><?= $this->translate(implode($this->messages)); ?></p>
+                    <?php IF($this->url): ?>
+                        <p><a href="<?= $this->url; ?>"><?= $this->gototext; ?></a></p>
+                    <?php ENDIF; ?>
+                </div>
             </div>
         </div>
     </div>
