--- a/public/css/snenko-bootstrap-theme.css
+++ b/public/css/snenko-bootstrap-theme.css
@@ -173,21 +173,11 @@ a.thumbnail.active, a.thumbnail:focus, a.thumbnail:hover {
     font-family: Georgia,serif;
 }
 .well{
-    /** розовий ***************************************************/
-    background: rgb(164,101,166); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(164,101,166,1) 0px, rgba(105,33,108,1) 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0px,rgba(164,101,166,1)), color-stop(100%,rgba(105,33,108,1))); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  rgba(164,101,166,1) 0px,rgba(105,33,108,1) 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  rgba(164,101,166,1) 0px,rgba(105,33,108,1) 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  rgba(164,101,166,1) 0px,rgba(105,33,108,1) 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  rgba(164,101,166,1) 0px,rgba(105,33,108,1) 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a465a6', endColorstr='#69216c',GradientType=0 ); /* IE6-9 */
-    border-color: #A465A6 #A465A6 #69216C;
-    border-style: solid;
-    border-width: 1px;
-    /*****************************************************/
-    font-style: italic;
-    font-weight: bold;
-    font-family: Georgia,serif;
-    color: white !important;
+}
+/*щоб зображення було завжди в центрі каруселі*/
+.carousel-inner .item img {
+    margin: auto;
+}
+.nav-pills>li>a {
+    color: #87298A;
 }
